src/objects/CustomerControlSegments__c.object
<CustomObject>
    <fields>
        <fullName>c_control_segment_desc__c</fullName>
        <description>c_control_segment_desc</description>
        <label>c_control_segment_desc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_control_segment_lvl__c</fullName>
        <description>c_control_segment_lvl</description>
        <label>c_control_segment_lvl</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_customer_segment_desc__c</fullName>
        <description>c_customer_segment_desc</description>
        <label>c_customer_segment_desc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_customer_segment_short_desc__c</fullName>
        <description>c_customer_segment_short_desc</description>
        <label>c_customer_segment_short_desc</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_incented_status__c</fullName>
        <description>c_incented_status</description>
        <label>c_incented_status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_known_status__c</fullName>
        <description>c_known_status</description>
        <label>c_known_status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>c_prop_cd_fk</description>
        <label>Property code</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Control Segments</relationshipLabel>
        <relationshipName>Customer_Control_Segments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <description>c_quality_cd</description>
        <label>c_quality_cd</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_end_dt__c</fullName>
        <description>d_end_dt</description>
        <label>d_end_dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_start_dt__c</fullName>
        <description>d_start_dt</description>
        <label>d_start_dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <label>d_timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i_control_segment__c</fullName>
        <description>i_control_segment</description>
        <label>i_control_segment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_control_segment_max__c</fullName>
        <description>i_control_segment_max</description>
        <label>i_control_segment_max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_control_segment_min__c</fullName>
        <description>i_control_segment_min</description>
        <label>i_control_segment_min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_customer_segment__c</fullName>
        <description>i_customer_segment</description>
        <label>i_customer_segment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Customer Control Segments</label>
    <nameField>
        <displayFormat>CCS-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Control Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>